fixed publication pictures; added link to original template

--- a/index.html
+++ b/index.html
@@ -205,11 +205,13 @@
               </div>
 
               <div class="service-content-box">
+                <a href="https://huggingface.co/datasets/jhu-clsp/paradocs">
                 <h4 class="h4 service-item-title">ParaDocs</h4>
 
                 <p class="service-item-text">
                   A collection of parallel dataset with document-level annotations for context-aware machine translation.
                 </p>
+                </a>
               </div>
 
             </li>
@@ -221,11 +223,13 @@
               </div>
 
               <div class="service-content-box">
+                <a href="https://github.com/rewicks/ctxpro">
                 <h4 class="h4 service-item-title">CTXPRO</h4>
 
                 <p class="service-item-text">
                   Automatically curated evaluation datasets to measure the ability to translate contextually-ambiguous discourse phenomena.
                 </p>
+                </a>
               </div>
 
             </li>
@@ -253,11 +257,13 @@
               </div>
 
               <div class="service-content-box">
+                <a href="https://github.com/rewicks/ersatz">
                 <h4 class="h4 service-item-title">ersatz</h4>
 
                 <p class="service-item-text">
                   A training and inference framework for the task of sentence segmentation in many languages.
                 </p>
+                </a>
               </div>
 
             </li>
@@ -464,6 +470,13 @@
           </ul>
 
         </section> -->
+
+        <section class="about-text">
+          <p>
+            This website is derived from a template you can find <a href="https://github.com/codewithsadee/vcard-personal-portfolio">here</a>.
+          </p>
+
+        </section>
 
       </article>
 
