add google scholar link

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
             </a>
           </li>
 
+          <li class="social-item">
+            <a href="https://scholar.google.com/citations?user=4YgNjmIAAAAJ&hl=en&oi=ao" class="social-link">
+              <ion-icon name="school-outline"></ion-icon>
+            </a>
+          </li>
+
         </ul>
 
       </div>
