fixed ion icons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
+              <img src = "./assets/images/mail-outline.svg" width="60%" color="#6ee0ff"/>
             </div>
 
             <div class="contact-info">
@@ -72,7 +72,9 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
+              <img src = "./assets/images/location-outline.svg" width="65%"/>
+
+              <!-- <ion-icon name="location-outline"></ion-icon> -->
             </div>
 
             <div class="contact-info">
@@ -91,7 +93,8 @@
 
           <li class="social-item">
             <a href="https://github.com/rewicks" class="social-link">
-              <ion-icon name="logo-github"></ion-icon>
+              <img src = "./assets/images/github-mark-white.svg" class="social-link"/>
+              <!-- <ion-icon name="logo-github"></ion-icon> -->
             </a>
           </li>
 
@@ -104,7 +107,7 @@
 
           <li class="social-item">
             <a href="https://scholar.google.com/citations?user=4YgNjmIAAAAJ&hl=en&oi=ao" class="social-link">
-              <ion-icon name="school-outline"></ion-icon>
+              <img src = "./assets/images/google-scholar-logo.svg" class="social-link"/>
             </a>
           </li>
 
@@ -157,7 +160,7 @@
             I'm a final year PhD student at Johns Hopkins University. 
             For the past few years I've been working with <a href="https://waypost.net/">Matt Post</a> and <a href="https://www.cs.jhu.edu/~phi/">Philipp Koehn</a>.
             My research has focused on the nitty-gritty problems (read: <i>data</i> improvements) that oft get overlooked, targeting improvement in machine translation.
-            More broadly, I'm interested in multilinguality in NLP, with experience in sequence to sequence modeling, corpus creation, and data augmentation.
+            More broadly, I'm interested in multilinguality in generative models, with experience in sequence to sequence modeling, corpus creation, and data augmentation.
           </p>
 
         </section>
@@ -571,6 +574,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  
 
 </body>
 
