--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="info-content">
           <h1 class="name" title="Rachel Wicks">Rachel Wicks</h1>
 
-          <p class="title">PhD Student</p>
+          <p class="title">PhD Student (ABD)</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
