--- a/template.html
+++ b/template.html
@@ -57,7 +57,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
+              <img src = "./assets/images/mail-outline.svg" width="60%" color="#6ee0ff"/>
             </div>
 
             <div class="contact-info">
@@ -72,7 +72,9 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
+              <img src = "./assets/images/location-outline.svg" width="65%"/>
+
+              <!-- <ion-icon name="location-outline"></ion-icon> -->
             </div>
 
             <div class="contact-info">
@@ -91,7 +93,8 @@
 
           <li class="social-item">
             <a href="https://github.com/rewicks" class="social-link">
-              <ion-icon name="logo-github"></ion-icon>
+              <img src = "./assets/images/github-mark-white.svg" class="social-link"/>
+              <!-- <ion-icon name="logo-github"></ion-icon> -->
             </a>
           </li>
 
@@ -104,7 +107,7 @@
 
           <li class="social-item">
             <a href="https://scholar.google.com/citations?user=4YgNjmIAAAAJ&hl=en&oi=ao" class="social-link">
-              <ion-icon name="school-outline"></ion-icon>
+              <img src = "./assets/images/google-scholar-logo.svg" class="social-link"/>
             </a>
           </li>
 
@@ -157,7 +160,7 @@
             I'm a final year PhD student at Johns Hopkins University. 
             For the past few years I've been working with <a href="https://waypost.net/">Matt Post</a> and <a href="https://www.cs.jhu.edu/~phi/">Philipp Koehn</a>.
             My research has focused on the nitty-gritty problems (read: <i>data</i> improvements) that oft get overlooked, targeting improvement in machine translation.
-            More broadly, I'm interested in multilinguality in NLP, with experience in sequence to sequence modeling, corpus creation, and data augmentation.
+            More broadly, I'm interested in multilinguality in generative models, with experience in sequence to sequence modeling, corpus creation, and data augmentation.
           </p>
 
         </section>
@@ -172,6 +175,25 @@
           <h3 class="h3 service-title">Projects</h3>
 
           <ul class="service-list">
+
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+              </div>
+
+              <div class="service-content-box">
+                <a href="https://github.com/mjpost/abe">
+                <h4 class="h4 service-item-title">Agreement Based Ensembling</h4>
+
+                <p class="service-item-text">
+                  A new inference technique to ensemble models with different vocabularies.
+                </p>
+                </a>
+              </div>
+
+            </li>
+
 
             <li class="service-item">
 
