--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="google-site-verification" content="rhFcnyhACYGR2kTubQOce9LDkUxpzkENo6B3UYHfVaI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rachel Wicks</title>
 
